# tiktok-tg-bot

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
docs/: ideas.md
docs/research/: yt-dlp-metadata.md
docs/superpowers/plans/: 2026-06-26-bot-healthcheck.md  2026-07-20-analytics-data-layer.md  2026-07-20-analytics-surfaces.md
docs/superpowers/specs/: 2026-06-26-bot-healthcheck-design.md  2026-07-20-analytics-data-layer-design.md  2026-07-20-analytics-surfaces-design.md
specs/001-video-download-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-video-download-bot/checklists/: requirements.md
specs/001-video-download-bot/contracts/: telegram-bot-interface.md
specs/002-output-format-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-output-format-selection/checklists/: requirements.md
specs/002-output-format-selection/contracts/: format-keywords.md
src/bot/: __main__.py  config.py  filters.py  health.py  logging.py
src/bot/handlers/: admin.py  common.py  group.py  inline.py  private.py  stats.py
src/bot/locales/: messages.py
src/bot/models/: request.py  video_info.py
src/bot/services/: analytics.py  downloader.py  format_parser.py  queue.py  (+3 more)
tests/unit/: test_analytics.py  test_analytics_capture.py  test_downloader.py  test_format_parser.py  test_handler_routing.py  test_health.py  test_stats_handlers.py  test_stats_messages.py  test_stats_service.py  test_video_info.py
