[project]
name = "tiktok-tg-bot"
version = "0.1.0"
description = "Telegram bot for downloading short videos from TikTok, YouTube Shorts, and Instagram Reels"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0,<22.0",
    "yt-dlp",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/bot/locales/messages.py" = ["RUF001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bot"]

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
